--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,17 @@ h1{
     padding: 20px;
 }
 #display{
-    width: 100%;
-    height: 30px;
+    width: 97%;
+    height: 40px;
     box-sizing: border-box;
     border: none;
     border-radius: 6px;
     background-color: rgb(255, 255, 255);
     text-align: right;
     margin-bottom: 16px;
+    padding-right: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 5vh;
 }
 .box-botão{
     display: grid;
@@ -44,4 +47,13 @@ button{
 button:hover{
     background-color: rgb(246, 77, 4);
     cursor: pointer;
+}
+.btn-zero{
+    grid-column: 1 / 3;
+    width: 95%;
+}
+.btn-resultado{
+    grid-row: 4 / 6;
+    height: 100%;
+    grid-column: 4;
 }
